# liztomaniac-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: aws-oidc-smoke.yml  ci.yml  terraform-apply  terraform-apply.yml
infra/terraform/: backend.tf.example  kms.tf  main.tf  providers.tf  storage.tf  terraform.auto.tfvars.example  variables.tf
infra/terraform/backend/: main.tf  variables.tf
src/liztomaniac/api/: app.py
src/liztomaniac/processor/: transform.py
tests/: test_health.py
