[tool.poetry]
name = "liztomaniac"
version = "0.1.0"
description = ""
authors = ["Guillermo <guillermo.garcia.espuela@gmail.com>"]
packages = [{ include = "liztomaniac", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = { extras = ["standard"], version = ">=0.40.0,<0.41.0" }
pydantic-settings = ">=2.12.0,<3.0.0"
boto3 = ">=1.42.34,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.14,<0.15.0"
mypy = ">=1.19.1,<2.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pre-commit = ">=4.5.1,<5.0.0"

[tool.poetry.group.lab]
optional = true

[tool.poetry.group.lab.dependencies]
librosa = ">=0.11.0,<0.12.0"
soundfile = ">=0.13.1,<0.14.0"
jupyterlab = ">=4.5.3,<5.0.0"
ipykernel = ">=7.1.0,<8.0.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
